--- a/02-Udemy/-04-Reactjs-Maximilian/Projects/17-Products-app/package.json
+++ b/02-Udemy/-04-Reactjs-Maximilian/Projects/17-Products-app/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "react-complete-guide",
+  "name": "react-hooks-update",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.5.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^0.2.4"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -18,10 +17,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
